@@ -2341,13 +2341,19 @@
       <fnargs>
 	<fnarg type="scalar">m</fnarg>
 	<fnarg type="scalar">r</fnarg>
+	<fnarg optional="true" type="scalar">offset</fnarg>
       </fnargs>
       <description>
 	<para>
-	  Returns an <by r="m" c="r"/> matrix containing <math>m</math> Halton
-	  sequences of length <math>r</math>; <math>m</math> is limited to a
-	  maximum of 40. See <cite key="halton64">Halton and Smith
-	  (1964)</cite>.
+	  Returns an <by r="m" c="r"/> matrix containing
+	  <math>m</math> Halton sequences of length <math>r</math>;
+	  <math>m</math> is limited to a maximum of 40. The sequences
+	  are contructed using the first <math>m</math> primes. By
+	  default the first 10 elements of each sequence are
+	  discarded, but this figure can be adjusted via the optional
+	  <argname>offset</argname> argument, which should be a
+	  non-negative integer. See <cite key="halton64">Halton and
+	  Smith (1964)</cite>.
 	</para>
       </description>
     </function>
