@@ -90,7 +90,7 @@ double gretl_restricted_mean (int t1, int t2, const double *x,
 			      double yval);
 
 double gretl_quantile (int t1, int t2, const double *x, 
-		       double p, int *err);
+		       double p, gretlopt opt, int *err);
 
 int gretl_array_quantiles (double *a, int n, double *p, int k);
 
