@@ -1456,15 +1456,16 @@ static double halton (int i, int base)
  * halton_matrix:
  * @m: number of rows (sequences); the maximum is 40.
  * @r: number of columns (elements in each sequence).
+ * @offset: the number of initial values to discard.
  * @err: location to receive error code.
  *
  * Returns: an @m x @r matrix containing @m Halton
  * sequences. The sequences are contructed using the first 
- * @m primes, and the first 10 elements of each sequence 
+ * @m primes, and the first @offset elements of each sequence 
  * are discarded.
  */
 
-gretl_matrix *halton_matrix (int m, int r, int *err)
+gretl_matrix *halton_matrix (int m, int r, int offset, int *err)
 {
     const int bases[] = {
 	2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31,
@@ -1477,7 +1478,7 @@ gretl_matrix *halton_matrix (int m, int r, int *err)
     double hij;
     int i, j, k, n;
 
-    if (m > 40) {
+    if (m > 40 || offset < 0) {
 	*err = E_DATA;
 	return NULL;
     }
@@ -1488,14 +1489,14 @@ gretl_matrix *halton_matrix (int m, int r, int *err)
 	return NULL;
     }
     
-    /* we'll discard the first 10 elements */
-    n = r + 10;
+    /* we'll discard the first @offset elements */
+    n = r + offset;
 
     for (i=0; i<m; i++) {
 	j = 0;
 	for (k=1; k<n; k++) {
 	    hij = halton(k, bases[i]);
-	    if (k > 9) {
+	    if (k >= offset) {
 		gretl_matrix_set(H, i, j++, hij);
 	    }
 	}
